--- a/templates/_base.html
+++ b/templates/_base.html
@@ -14,14 +14,14 @@
     {% endblock title %}
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static 'images/logo.png' %}" alt="Taskmate"></a>
+        <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static 'images/logo.png' %}" alt="Board"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
             <a class="nav-item nav-link" href="{% url 'index' %}">Home</a>
-            <a class="nav-item nav-link" href="{% url 'todolist' %}">Todo List</a>
+            <a class="nav-item nav-link" href="{% url 'todolist' %}">Board</a>
             <a class="nav-item nav-link" href="{% url 'contact' %}">Contact Us</a>            
             <a class="nav-item nav-link" href="{% url 'about' %}">About Us</a>
             </div>
